top bar aligned, dropdowns need fix

--- a/style.css
+++ b/style.css
@@ -3,24 +3,28 @@ body{
 }
 
 .topgap{
-    padding: 20px;
+    padding: 10px;
 }
 
 .topbar{
-    padding-top: 1%;
-    padding-bottom: 1%;
+    width: 100%;
+    height: 50px;
     background-image: linear-gradient(to right, #33BFFF, #2A6AC6);
+    overflow: visible;
 }
 
 .logo{
-    max-width: 15%;
-    max-height: 7.5%;
+    display: inline-block;
+    vertical-align: middle;
+    height:  200px;
+    margin-right: 20px;
+    margin-top: -60px;
     cursor: pointer;
     float:left;
 }
 
 .homebody{
-    margin-top: 50px;
+    margin-top: -20px;
     margin-left: 10%;
     margin-right: 10%;
     max-width: 80%;
@@ -35,11 +39,38 @@ body{
 
 .advance-text{
     font-family: 'Source Code Pro', monospace;
-    font-size: 40px;
+    white-space: nowrap;
+    font-size: 35px;
     position: absolute;
     top:60%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+ul{
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  vertical-align: middle;
+  overflow: hidden;
+}
+
+li{
+  float:right;
+  margin-top: 10px;
+  margin-right: 20px;
+}
+
+li a{
+  display: inline-block;
+  color: white;
+  text-align: center;
+  margin-right: 20px;
+  text-decoration: none;
+}
+
+li a:hover {
+  color: #d3d3d3;
 }
 
 .buttondiv{
@@ -69,7 +100,6 @@ button:hover{
 .dropdown {
     position: relative;
     display: inline-block;
-    top: 10%;
 }
 
 .dropdown-content {
